[gd_scene load_steps=19 format=3 uid="uid://bvkim1x1vvm81"]

[ext_resource type="Script" path="res://src/screen_puzzles/ui/screen_puzzle_ui.gd" id="1_lx7ia"]
[ext_resource type="Texture2D" uid="uid://bo4rxkqslvfgs" path="res://assets/ui/screen_puzzle_v2/screen_puzzle_focus.png" id="2_jwgwr"]
[ext_resource type="Texture2D" uid="uid://b4ji6s0lw01b" path="res://assets/ui/screen_puzzle_v2/folder_backer.png" id="3_ayfkr"]
[ext_resource type="Texture2D" uid="uid://cjb6dnvqb407f" path="res://assets/ui/screen_puzzle_v2/bottom_bar.png" id="4_1qhds"]
[ext_resource type="PackedScene" uid="uid://bl53k36i6wlyr" path="res://src/screen_puzzles/ui/folder_button.tscn" id="4_74w76"]
[ext_resource type="Texture2D" uid="uid://bfrgetatfc77d" path="res://assets/ui/screen_puzzle_v2/text_backer.png" id="5_3rdof"]
[ext_resource type="FontFile" uid="uid://c3dptkqdore24" path="res://assets/ui/fonts/SourceCodePro-VariableFont_wght.ttf" id="6_4wx76"]
[ext_resource type="FontFile" uid="uid://cjmlvobt18yan" path="res://assets/ui/fonts/SourceCodePro-Italic-VariableFont_wght.ttf" id="7_xu7tl"]
[ext_resource type="Texture2D" uid="uid://drhnifk15jxrl" path="res://assets/ui/screen_puzzle_v2/launch_neutral.png" id="9_g8wlq"]
[ext_resource type="Texture2D" uid="uid://cib2118pvidh" path="res://assets/ui/screen_puzzle_v2/launch_press.png" id="10_i4wk7"]
[ext_resource type="Texture2D" uid="uid://cphbacek37g31" path="res://assets/ui/screen_puzzle_v2/launch_hover.png" id="11_boikd"]
[ext_resource type="Texture2D" uid="uid://gwmus78xlamm" path="res://assets/ui/screen_puzzle_v2/reset_neutral.png" id="12_2sb5j"]
[ext_resource type="Texture2D" uid="uid://cwt5dn0p5ngcm" path="res://assets/ui/screen_puzzle_v2/reset_press.png" id="13_gdf6r"]
[ext_resource type="Texture2D" uid="uid://b84ee8pohja5i" path="res://assets/ui/screen_puzzle_v2/reset_hover.png" id="14_lyfo2"]

[sub_resource type="FontVariation" id="FontVariation_nro8r"]
base_font = ExtResource("6_4wx76")
variation_embolden = 0.87

[sub_resource type="FontVariation" id="FontVariation_1kus4"]
base_font = ExtResource("6_4wx76")
variation_embolden = 2.0

[sub_resource type="FontVariation" id="FontVariation_hwpmr"]
base_font = ExtResource("7_xu7tl")
variation_embolden = 0.87

[sub_resource type="FontVariation" id="FontVariation_ltfqk"]
base_font = ExtResource("7_xu7tl")
variation_embolden = 1.85

[node name="ScreenPuzzleUI" type="Control" node_paths=PackedStringArray("folders_container", "main_text_label", "launch_result_label")]
layout_mode = 3
anchors_preset = 0
offset_left = -1920.0
offset_top = -1080.0
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2
script = ExtResource("1_lx7ia")
folders_container = NodePath("FolderBacker/MarginContainer/FoldersContainer")
main_text_label = NodePath("DialogueBacker/ScrollContainer/MarginContainer/RichTextLabel")
launch_result_label = NodePath("LaunchResultLabel")

[node name="Background" type="ColorRect" parent="."]
z_index = -10
layout_mode = 0
offset_right = 3840.0
offset_bottom = 2160.0
color = Color(0, 0, 0, 1)

[node name="Lineblocker" type="TextureRect" parent="."]
layout_mode = 2
offset_right = 3840.0
offset_bottom = 2160.0
texture = ExtResource("2_jwgwr")

[node name="LaunchResultLabel" type="RichTextLabel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 300
theme_override_font_sizes/bold_font_size = 300
theme_override_font_sizes/italics_font_size = 300
theme_override_font_sizes/bold_italics_font_size = 300
theme_override_font_sizes/mono_font_size = 300
bbcode_enabled = true
text = "[center] sdfasdfasdf [/center]"
fit_content = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1920, 1080)
zoom = Vector2(0.5, 0.5)

[node name="FolderBacker" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 225.0
offset_top = 184.0
offset_right = 1017.0
offset_bottom = 325.0
texture = ExtResource("3_ayfkr")

[node name="MarginContainer" type="MarginContainer" parent="FolderBacker"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -38.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60

[node name="FoldersContainer" type="HBoxContainer" parent="FolderBacker/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="FolderButton" parent="FolderBacker/MarginContainer/FoldersContainer" instance=ExtResource("4_74w76")]
layout_mode = 2

[node name="FolderButton2" parent="FolderBacker/MarginContainer/FoldersContainer" instance=ExtResource("4_74w76")]
layout_mode = 2

[node name="DialogueBacker" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 2530.0
offset_top = 250.0
offset_right = 3551.0
offset_bottom = 1843.0
size_flags_horizontal = 8
texture = ExtResource("5_3rdof")
stretch_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="DialogueBacker"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="DialogueBacker/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 110
theme_override_constants/margin_top = 115
theme_override_constants/margin_right = 110

[node name="RichTextLabel" type="RichTextLabel" parent="DialogueBacker/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = SubResource("FontVariation_nro8r")
theme_override_fonts/bold_font = SubResource("FontVariation_1kus4")
theme_override_fonts/italics_font = SubResource("FontVariation_hwpmr")
theme_override_fonts/bold_italics_font = SubResource("FontVariation_ltfqk")
theme_override_font_sizes/normal_font_size = 50
theme_override_font_sizes/bold_font_size = 50
theme_override_font_sizes/italics_font_size = 50
theme_override_font_sizes/bold_italics_font_size = 50
theme_override_font_sizes/mono_font_size = 50
bbcode_enabled = true
text = "[center][b]FILEPATH MISSING[/b]

Please drag [b]<action>[/b]
onto flightpath to reach
target directory[/center]"
shortcut_keys_enabled = false

[node name="BottomBar" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -1711.0
offset_top = -282.0
offset_right = 1702.0
offset_bottom = -89.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("4_1qhds")

[node name="LaunchButton" type="TextureButton" parent="BottomBar"]
layout_mode = 0
offset_left = 2194.0
offset_top = -295.0
offset_right = 3016.0
offset_bottom = 245.0
texture_normal = ExtResource("9_g8wlq")
texture_pressed = ExtResource("10_i4wk7")
texture_hover = ExtResource("11_boikd")

[node name="ResetButton" type="TextureButton" parent="BottomBar"]
layout_mode = 0
offset_left = 2919.0
offset_top = -295.0
offset_right = 3453.0
offset_bottom = 244.0
texture_normal = ExtResource("12_2sb5j")
texture_pressed = ExtResource("13_gdf6r")
texture_hover = ExtResource("14_lyfo2")

[connection signal="pressed" from="BottomBar/LaunchButton" to="." method="_on_launch_button_pressed"]
